# bibliometrics-forecasting

./: .gitignore  README.md  export_tf_dataset.py  main.py  pyproject.toml  train.py
config/: config.toml
src/: export_tf_dataset.py  load_data.py  model_builder.py  stream_parquet.py  train.py  tune (LAPTOP-J41MAND4's conflicted copy 2025-07-20).py  tune.py
src/AbstractTransformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/callbacks/: custom_prog_bar.py
src/data_stream/: create_tf_dataset.py  load_from_disk.py
src/models/: cnn.py  registry.py
src/utils/: convert_pa_list.py  gpu_troubleshoot.py  load_config.py  setup_logging.py
