[project]
name = "AbstractTransformer"
version = "0.1.0"
description = "Analyse word embeddings over time "
authors = [
    {name="Felix Noble", email="felix.noble@live.co.uk"}
    ]
requires-python = ">=3.10"

dependencies = [
"tensorflow==2.10",
"keras",
"keras_tuner",
"numpy==1.26",
"pandas",
"toml",
"dask",
"pyarrow",
"duckdb"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

